<resources>
    <string name="app_name">Nord Starter</string>

    <!--  connectivity  -->
    <string name="no_internet">Please check your internet connection</string>

    <!--  toolbar menu items  -->
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="default_user_initial">A</string>

    <!--  home fragment  -->
    <string name="home">Home</string>
    <string name="dummy_items">Dummy Items</string>

    <!--  authentication fragment  -->
    <string name="user">User</string>
    <string name="already_a_user">Already a User?</string>
    <string name="not_a_user">New User? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="first_and_last_name">First and Last Name</string>

    <!-- logout fragment -->
    <string name="logout">Logout</string>

    <!-- notification channels  -->
    <!-- TODO: Change the default notification channel information -->
    <string name="default_channel_id">ai.andromeda.nord.default</string>
    <string name="default_channel_name">Nord Notifications</string>
    <string name="default_channel_desc">This is the default notification channel</string>
    <string name="fcm_channel_id">ai.andromeda.nord.fcm</string>
    <string name="fcm_channel_name">Firebase Cloud Messaging</string>
    <string name="fcm_channel_desc">This is the firebase push notification channel</string>

    <!--  permission rationale  -->
    <string name="permission_rationale">Please grant the following permissions in order for the app to work</string>

    <!-- preference titles -->
    <string name="customization">Customization</string>
    <string name="theme">Theme</string>

    <!-- app theme key -->
    <string name="app_theme_key">nord_app_theme</string>

</resources>